# Nexuscore_MCP

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  README_KR.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: codeql.yml  gitleaks.yml  rust.yml
docs/: showcase.md
resources/scripts/: api_monitor.js  stealth_unpacker.js
scripts/: fix_common.py  fix_rc4.py  fix_tools.py  refactor.py  remove_async_trait.py  restore_async_trait.py  setup_tools.ps1
src/: lib.rs  main.rs  server.rs
src/app/: analysis_session_service.rs  mod.rs
src/engine/: frida_handler.rs  mod.rs
src/resources/scripts/: api_monitor.js  crypto_hook.js  ssl_keylog.js  string_sniffer.js
src/sandbox/: cape.rs
src/state/: analysis_session.rs  mod.rs  session_store.rs
src/tools/: analysis_session.rs  etw.rs  mod.rs
src/tools/common/: frida_session.rs  hook.rs  memory.rs  metrics.rs  mod.rs  network.rs  process.rs
src/tools/firmware/: mod.rs
src/tools/game/: mod.rs
src/tools/intel/: reputation.rs
src/tools/iot/: mod.rs
src/tools/malware/: api_monitor.rs  callstack.rs  cape_check_status.rs  child_trapper.rs  codeql.rs  config_extractor.rs  debugger.rs  defender.rs  doc_analyzer.rs  etw.rs  iat.rs  memory_dump.rs  mod.rs  pe_sieve.rs  proxy.rs  sandbox_submit.rs  shellcode_emu.rs  ssl_dumper.rs  ssl_keylog.rs  stalker.rs  string_sniffer.rs  time_warp.rs  yara.rs  yara_gen.rs
src/tools/malware/analysis/: config_extractor.rs  disasm.rs  doc_analyzer.rs  iat.rs  memory_read.rs  micro_emu.rs  mod.rs  pe_sieve.rs  python_sandbox.rs  reconstruction.rs  reversing_bridge.rs  shellcode_emu.rs  unpacker.rs  yara_gen.rs  yara_verify.rs
src/tools/malware/debug/: debugger.rs  mod.rs
src/tools/malware/frida/: api_monitor.rs  auto_deobfuscate.rs  callstack.rs  child_trapper.rs  crypto_hook.rs  memory_dump.rs  mod.rs  spoof_return.rs  ssl_dumper.rs  ssl_keylog.rs  stalker.rs  string_sniffer.rs  time_warp.rs
src/tools/malware/wrappers/: external.rs
src/tools/network/: fakenet.rs  mod.rs
src/tools/system/: diff.rs  eventlog.rs  gui_spy.rs  handles.rs  health_check.rs  input_sim.rs  mod.rs  persistence.rs
src/utils/: cache.rs  jobs.rs  logging.rs  mod.rs  response.rs  sanitizer.rs  streaming.rs
tests/: analysis_session_tests.rs  cache_test.rs  cape_report_tests.rs  e2e_smoke.rs  frida_smoke_tests.rs  integration_test.rs  logging_test.rs  mcp_contract_tests.rs  memory_tests.rs  network_tests.rs  process_tests.rs  reconstruction_tests.rs  response_test.rs  sandbox_tests.rs  schema_test.rs  security_tests.rs  tool_invocation_tests.rs  tool_validation.rs
tests/suites/: analysis_session_tests.rs  cape_report_tests.rs  mcp_contract_tests.rs  sandbox_tests.rs
