[package]
name = "nexuscore_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
winreg = "0.10"

# Security & Analysis
yara = { version = "0.26", features = ["bundled-4_5_0"] } 
frida = "0.17.0"
capstone = "0.11"
iced-x86 = "1.21.0"
goblin = "0.10.4"
hex = "0.4.3"

# MCP Protocol
rmcp = { version = "0.10.0", features = ["server"] }
schemars = "1.1.0"

[dev-dependencies]
mockito = "1.1.0"
# mockito = "1.4" is preferred if not using old one.
