[package]
name = "nexuscore_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
winreg = "0.10"

# Security & Analysis
yara = { version = "0.26", features = ["bundled-4_5_0"] } 
frida = "0.17.0"
capstone = "0.13"
iced-x86 = "1.21.0"
goblin = "0.10.4"
hex = "0.4.3"

# MCP Protocol
rmcp = { version = "0.10.0", features = ["server"] }
schemars = "1.1.0"

# Phase 2: Advanced Tools
unicorn-engine = "2.0"    # Shellcode emulation
base64 = "0.21"           # Config extractor
aes = "0.8"               # Config extractor
cbc = "0.1"               # AES CBC mode
rc4 = "0.1"               # Config extractor
sha2 = "0.10"             # System diff (hashing)
walkdir = "2.4"           # System diff (file walk)
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] } # Input sim + GUI spy
chrono = "0.4"            # YARA generator timestamps
which = "5.0"             # x64dbg path detection

[dev-dependencies]
mockito = "1.1.0"
